fix(ADA-1400): Changed Volume_Bar design to fit the contrast requirements

--- a/src/components/volume/_volume.scss
+++ b/src/components/volume/_volume.scss
@@ -97,7 +97,7 @@
     left: 0;
     width: 100%;
     border-radius: 0 0 2px 2px;
-    background-color: $primary-color;
+    background-color: #ffffffff;
   }
 }
 
